overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+html {
+  width: 100vw;
+  overflow-x: hidden;
+}
+
 body {
   /* border: 1px solid red; */
   width: 100vw;
